# mssgpie

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  docker-compose.yml  manage.py  pyproject.toml
messages/: admin.py  apps.py  models.py  urls.py  views.py
messages/migrations/: 0001_initial.py
mssgpie/: asgi.py  settings.py  urls.py  wsgi.py
