[project]
name = "mssgpie"
version = "0.1.0"
description = "Universal text classifier for message parsing and categorization"
requires-python = "==3.11.*"
dependencies = [
    "django>=4.2,<4.3",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
]
